[GUI / FIX] Gave more space for navigation features in Feature-Sites. Content now is not covered anymore by an element.

--- a/lumify.app/app/(app)/(space)/Events/components/Calendar/components/CalendarDay/CalendarDay.module.css
+++ b/lumify.app/app/(app)/(space)/Events/components/Calendar/components/CalendarDay/CalendarDay.module.css
@@ -81,6 +81,9 @@
     color: var(--color-highlight-bright);
     font-weight: bold;
 }
+[data-theme="beach"] .currentDay .dayLabelShort {
+    color: var(--color-highlight);
+}
 
 .dayLabelFull {
     width: 100%;
@@ -116,7 +119,7 @@
 
 .currentDay {
     position: relative;
-    background-color: var(--color-bar);
+    background-color: var(--color-purple-light);
 }
 .currentDay::before {
     content: "";
