--- a/lumify.app/app/(app)/(space)/Events/components/Calendar/components/CalendarNavigation/CalenderNavigation.module.css
+++ b/lumify.app/app/(app)/(space)/Events/components/Calendar/components/CalendarNavigation/CalenderNavigation.module.css
@@ -8,7 +8,7 @@
     padding: 5px 12px;
     gap: 25px;
 
-    border: 1px solid var(--color-pill);
+    border: 1px solid var(--color-purple-light);
     border-radius: 10px;
 
 }
@@ -42,17 +42,18 @@
     padding: 8px 12px;
     gap: 6px;
 
-    background-color: var(--color-pill);
+    background-color: var(--color-purple-dark);
     border-radius: 20px;
     border: 1px solid rgba(200,200,200,0.08);
 
     line-height: 1;
     cursor: pointer;
-    opacity: 0.8;
+    opacity: 1;
 }
 .actionPill:hover {
     opacity: 1;
-    background-color: var(--color-pill);
+    background-color: var(--color-highlight);
+    color: var(--color-actions)
 }
 
 
@@ -79,5 +80,11 @@
 }
 .back:hover,
 .forward:hover {
-    background-color: var(--color-pill);
+    background-color: var(--color-highlight);
+    color: var(--color-purple-dark);
+}
+
+[data-theme="beach"] .back:hover,
+[data-theme="beach"] .forward:hover {
+    color: var(--foreground);
 }
